# small-language-models

./: .gitignore  Building_Small_Language_Models.ipynb  Karpathy_Video_Series.ipynb  README.md
build-llm-from-scratch/: pyproject.toml  test.py
build-llm-from-scratch/llm_components/: __init__.py  components.py  gpt_parts.py  llm_parts.py  utils.py
hf-llm-course/: README.md  main.py  pyproject.toml
