[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-llm-from-scratch"
version = "0.1.0"
description = "Experiments for building a small language model from scratch."
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
]
