[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-llm-from-scratch"
version = "0.1.0"
description = "Experiments for building a small language model from scratch."
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "matplotlib>=3.8.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "pandas>=2.3.3",
]

[tool.setuptools]
packages = ["llm_components"]
